mucho mapa, muchos algoritmos

--- a/modulos/modulo_coordenada.tex
+++ b/modulos/modulo_coordenada.tex
@@ -10,7 +10,7 @@ Descripcion TODO ¿CUALES TIENEN DESCRIPCION Y CUALES NO?
 
 	\TituloDis{Operaciones básicas de Coordenada}
 
-	\InterfazFuncion{CrearCoor}{\In {y,x}{nat}}{coor}
+	\InterfazFuncion{CrearCoor}{\In{x,y}{nat}}{coor}
 	{$res$ $\igobs$ crearCoor(y,x)}
 	[$O(1)$]
 	[creación de una coordenada con latitud $x$ y longitud $y$.]
