--- a/modulos/modulo_juego.tex
+++ b/modulos/modulo_juego.tex
@@ -174,7 +174,6 @@ La cantidad de cada pokémon se guarda en un diccionario basado en trie, usando 
 		\item Todas las coordenadas pertenecientes a posConPokemons pertenecen a las coordenadas válidas del mapa
 
 		\item La suma de todos los significados del diccionario pokemons es igual a cantPokemons
-		%TODO no se como meter bien la sumatoria en esta condicion :(
 		
 		\item No hay dos coordenadas pertenecientes a posConPokemons a menos de 5 de distancia
 		
@@ -185,10 +184,9 @@ La cantidad de cada pokémon se guarda en un diccionario basado en trie, usando 
 			\item todos los significados de esa misma clave en los pokemonsCapturados de cada miembro de jugadores donde la clave existe y el jugador no fue eliminado
 			\item la cantidad de coordenadas de posConPokemons donde se encuentra un pokemon igual a esa clave
 		\end{itemize}
-		%TODO no se como meter bien la sumatoria en esta condicion AGAIN
+		%TODO definir como se saca que poke hay en cada posicion
 				
-		\item Para cada miembro de jugadores, si el jugador tiene 5 sanciones no puede estar conectado 
-		%TODO para hablar de jugadores, hablo de (forall i:infoJugador), alguno confirmeme la correctitud de esto pls
+		\item Para cada miembro de jugadores, si el jugador tiene 5 sanciones no puede estar conectado ¡
 		
 		\item Para cada miembro de jugadores, si el jugador esta conectado su posición tiene que pertenecer a las coordenadas válidas del mapa
 		
@@ -196,8 +194,23 @@ La cantidad de cada pokémon se guarda en un diccionario basado en trie, usando 
 
 
 	\Rep[pokego][e]{
-	($\forall c$: coor)(c $\in$ e.posConPokemons $\implies$ c $\in$ coordenadas(e.mapa)) $\land$ ($\forall c,d$: coor)(c $\in$ e.posConPokemons $\land$ d $\in$ e.posConPokemons $\implies$ c = d $\lor$ distEuclidea(c,d) $>$ 25) $\land$ ($\forall i$:infoJugador)(i $\in$ e.jugadores $\implies$ claves(i.pokemonsCapturados) $\subseteq$ claves(e.pokemons)) $\land$ ($\forall i$:infoJugador)(i.sanciones == 5 $\implies \neg$i.conectado?) $\yluego$ ($\forall i$:infoJugador)(i.conectado? $\implies$ i.posicion $\in$ coordenadas(e.mapa))
+	($\forall c$: coor)(c $\in$ e.posConPokemons $\implies$ c $\in$ coordenadas(e.mapa)) $\land$ e.cantPokemons == sumaSignificadosPoke(e.pokemons.claves, e.pokemons) $\land$ ($\forall c,d$: coor)(c $\in$ e.posConPokemons $\land$ d $\in$ e.posConPokemons $\implies$ c = d $\lor$ distEuclidea(c,d) $>$ 25) $\land$ ($\forall i$:nat)(i $<$ long(e.jugadores) $\implies$ claves(e.jugadores[i].pokemonsCapturados) $\subseteq$ claves(e.pokemons)) $\land$ ($\forall i$:nat)(i $<$ long(e.jugadores)$\implies$(e.jugadores[i].sanciones == 5 $\implies \neg$e.jugadores[i].conectado?)) $\yluego$ ($\forall i$:nat)(i $<$ long(e.jugadores) $/implies$ e.jugadores[i].conectado $\implies$ e.jugadores[i].posicion $\in$ coordenadas(e.mapa))
 	}
+	
+	~
+	
+	\tadOperacion{sumaSignificadosPoke}{conj(pokemon)/cs, dicc(String{,}Nat)/dic}{nat}{cs $\subseteq$ claves(dic)}
+		
+	~
+
+	\tadAxioma{sumaSignificadosPoke(cs, dic)}
+	{\IF vacia?(cs) THEN
+		0
+	ELSE
+		obtener(dic, dameUno(cs)) + sumaSignificadosPoke(sinUno(cs), dic)
+	FI}
+		
+	~
 	
 	\TituloDis{Función de Abstracción}
 
