--- a/modulos/modulo_juego.tex
+++ b/modulos/modulo_juego.tex
@@ -194,7 +194,7 @@ La cantidad de cada pokémon se guarda en un diccionario basado en trie, usando 
 
 
 	\Rep[pokego][e]{
-	($\forall c$: coor)(c $\in$ e.posConPokemons $\implies$ c $\in$ coordenadas(e.mapa)) $\land$ e.cantPokemons == sumaSignificadosPoke(e.pokemons.claves, e.pokemons) $\land$ ($\forall c,d$: coor)(c $\in$ e.posConPokemons $\land$ d $\in$ e.posConPokemons $\implies$ c = d $\lor$ distEuclidea(c,d) $>$ 25) $\land$ ($\forall i$:nat)(i $<$ long(e.jugadores) $\implies$ claves(e.jugadores[i].pokemonsCapturados) $\subseteq$ claves(e.pokemons)) $\land$ ($\forall i$:nat)(i $<$ long(e.jugadores)$\implies$(e.jugadores[i].sanciones == 5 $\implies \neg$e.jugadores[i].conectado?)) $\yluego$ ($\forall i$:nat)(i $<$ long(e.jugadores) $/implies$ e.jugadores[i].conectado $\implies$ e.jugadores[i].posicion $\in$ coordenadas(e.mapa))
+	($\forall c$: coor)(c $\in$ e.posConPokemons $\implies$ c $\in$ coordenadas(e.mapa)) $\land$ e.cantPokemons == sumaSignificadosPoke(claves(e.pokemons), e.pokemons) $\land$ ($\forall c,d$: coor)(c $\in$ e.posConPokemons $\land$ d $\in$ e.posConPokemons $\implies$ c = d $\lor$ distEuclidea(c,d) $>$ 25) $\land$ ($\forall i$:nat)(i $<$ long(e.jugadores) $\implies$ claves(e.jugadores[i].pokemonsCapturados) $\subseteq$ claves(e.pokemons)) $\land$ ($\forall i$:nat)(i $<$ long(e.jugadores)$\implies$(e.jugadores[i].sanciones == 5 $\implies \neg$e.jugadores[i].conectado?)) $\yluego$ ($\forall i$:nat)(i $<$ long(e.jugadores) $/implies$ e.jugadores[i].conectado $\implies$ e.jugadores[i].posicion $\in$ coordenadas(e.mapa))
 	}
 	
 	~
@@ -215,7 +215,7 @@ La cantidad de cada pokémon se guarda en un diccionario basado en trie, usando 
 	\TituloDis{Función de Abstracción}
 
 	\Abs[pokego]{juego}[e]{j}{
-		mapa(j) == e.mapa $\land$ ($\forall p:$ jugador))(p $\in$ jugadores(j) $\implies$ long(e.jugadores) $\geq$ p $\yluego$ estaConectado(p,j) == e.jugadores[p].conectado? $\land$ sanciones(p,j) == e.jugadores[p].sanciones $\land$ (estaConectado(p,j) $\impluego$ posicion(p,j) == e.jugadores[p].posicion)) $\land$ pokemons(j) == listaPoke(e.pokemons.claves, e.pokemons) $\land$ expulsados(j) == listaExpulsados(e.jugadores) $\land$ ($\forall c:$ coor) (c $\in$ posConPokemons(j) == c $\in$ e.posConPokemons) $\land$ TODO POKEMON EN POS, TODO MOV PARA CAPTURA
+		mapa(j) == e.mapa $\land$ ($\forall p:$ jugador))(p $\in$ jugadores(j) $\implies$ long(e.jugadores) $\geq$ p $\yluego$ estaConectado(p,j) == e.jugadores[p].conectado? $\land$ sanciones(p,j) == e.jugadores[p].sanciones $\land$ (estaConectado(p,j) $\impluego$ posicion(p,j) == e.jugadores[p].posicion)) $\land$ pokemons(j) == listaPoke(claves(e.pokemons), e.pokemons) $\land$ expulsados(j) == listaExpulsados(e.jugadores) $\land$ ($\forall c:$ coor) (c $\in$ posConPokemons(j) == c $\in$ e.posConPokemons) $\land$ TODO POKEMON EN POS, TODO MOV PARA CAPTURA
 	}
 	
 	~
